--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">Моля затворете H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.\n\nМожете да използвате бутона по-долу, за да убиете всички процеси на H1Z1.</system:String>
     <system:String x:Key="item122">Сегашна версия на играта:</system:String>
-    <system:String x:Key="item124">Версия на стартера v</system:String>
+    <system:String x:Key="item124">Версия на стартера</system:String>
     <system:String x:Key="item125">Авторски права © 2021 | H1Emu Project</system:String>
     <system:String x:Key="item126">Главен разработчик</system:String>
     <system:String x:Key="item127">Разработчици</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">Хора помогнали финансово</system:String>
     <system:String x:Key="item171">Версия на играта от 22 декември 2016 г., това е по-актуално и се поддържа от проекта.</system:String>
     <system:String x:Key="item172">Версия на играта от 15 януари 2015 г., това не получава толкова много актуализации като 2016 г. и може да й липсват функции.</system:String>
-    <system:String x:Key="item173">Докладвайте грешка...</system:String>
-    <system:String x:Key="item174">Тук може да докладвате всякакви грешки които сте срещнали докато използвате сървърните файлове:</system:String>
-    <system:String x:Key="item175">Тук можете да съобщите за грешки, които сте изпитали, докато сте използвали H1Emu Launcher:</system:String>
+    <system:String x:Key="item174">Докладвайте грешка с файловете на сървъра H1Emu</system:String>
+    <system:String x:Key="item175">Докладвайте грешка с програмата за стартиране на H1Emu</system:String>
     <system:String x:Key="item176">изтриване на данните за солова игра.</system:String>
     <system:String x:Key="item177">Не са открити данни за солова игра.</system:String>
     <system:String x:Key="item178">изтриването на данните за солова игра може да разреши проблемите ви , но имайте в предвид че сте изгубите целият си прогрес.\n\nБихте ли желали да продължите?</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">Изтрий</system:String>
     <system:String x:Key="item193">Копие</system:String>
     <system:String x:Key="item194">Изход</system:String>
+    <system:String x:Key="item195">Файлове за Игри</system:String>
+    <system:String x:Key="item196">Ключ на Cметката</system:String>
+    <system:String x:Key="item197">Настроики</system:String>
+    <system:String x:Key="item198">Доклади за Грешки</system:String>
+    <system:String x:Key="item199">Oтносно</system:String>
+    <system:String x:Key="item200">Избран език</system:String>
+    <system:String x:Key="item201">Показване на въртележка с изображения</system:String>
+    <system:String x:Key="item202">Минимизиране в системната област</system:String>
+    <system:String x:Key="item203">На</system:String>
+    <system:String x:Key="item204">Изкл</system:String>
+    <system:String x:Key="item205">ДОКЛАД</system:String>
+    <system:String x:Key="item206">Настройки</system:String>
+    <system:String x:Key="item207">Добавете сървър</system:String>
+    <system:String x:Key="item208">Опровержение</system:String>
+    <system:String x:Key="item209">Съобщение</system:String>
+    <system:String x:Key="item210">Начален Eкран</system:String>
+    <system:String x:Key="item211">Налична Aктуализация</system:String>
 </ResourceDictionary>
