--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">Bitte schließe H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe wird gerade verwendet\n\nBitte schließen Sie alle offenen Instanzen von H1Z1.\n\nSie können die Schaltfläche unten verwenden, um alle Prozesse von H1Z1 zu beenden.</system:String>
     <system:String x:Key="item122">Aktuelle Spielversion:</system:String>
-    <system:String x:Key="item124">Launcher Version v</system:String>
+    <system:String x:Key="item124">Launcher version</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Entwickler</system:String>
     <system:String x:Key="item127">Entwickler</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">Finanzielle Beitragszahler</system:String>
     <system:String x:Key="item171">Spielversion vom 22. Dezember 2016, diese ist aktueller und wird vom Projekt unterstützt.</system:String>
     <system:String x:Key="item172">Spielversion vom 15. Januar 2015, diese erhält nicht so viele Updates wie 2016 und ihr fehlen möglicherweise Funktionen.</system:String>
-    <system:String x:Key="item173">Melde einen technischen fehler...</system:String>
-    <system:String x:Key="item174">Hier können Sie alle Fehler melden, die Sie im Spiel bei der Verwendung der H1Emu-Serverdateien erlebt haben:</system:String>
-    <system:String x:Key="item175">Hier können Sie Fehler melden, die Ihnen bei der Verwendung des H1Emu Launcher aufgefallen sind:</system:String>
+    <system:String x:Key="item174">Melden Sie einen fehler mit den H1Emu serverdateien</system:String>
+    <system:String x:Key="item175">Melden Sie einen fehler mit dem H1Emu Launcher</system:String>
     <system:String x:Key="item176">Löschen Ihrer Singleplayer-Daten.</system:String>
     <system:String x:Key="item177">Keine Singleplayer-Daten gefunden.</system:String>
     <system:String x:Key="item178">Durch das Löschen Ihrer Einzelspieler-Daten können eventuell auftretende Probleme behoben werden. Seien Sie gewarnt, dass Sie jeglichen Fortschritt verlieren.\n\nMöchten Sie fortfahren?</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">Löschen</system:String>
     <system:String x:Key="item193">Kopieren</system:String>
     <system:String x:Key="item194">Ausfahrt</system:String>
+    <system:String x:Key="item195">Spieldateien</system:String>
+    <system:String x:Key="item196">Kontoschlüssel</system:String>
+    <system:String x:Key="item197">Optionen</system:String>
+    <system:String x:Key="item198">Fehlerberichte</system:String>
+    <system:String x:Key="item199">Um</system:String>
+    <system:String x:Key="item200">Ausgewählte Sprache</system:String>
+    <system:String x:Key="item201">Bildkarussell anzeigen</system:String>
+    <system:String x:Key="item202">In die taskleiste minimieren</system:String>
+    <system:String x:Key="item203">An</system:String>
+    <system:String x:Key="item204">Aus</system:String>
+    <system:String x:Key="item205">BERICHT</system:String>
+    <system:String x:Key="item206">Einstellungen</system:String>
+    <system:String x:Key="item207">Server Hinzufügen</system:String>
+    <system:String x:Key="item208">Haftungsausschluss</system:String>
+    <system:String x:Key="item209">Nachricht</system:String>
+    <system:String x:Key="item210">Begrüßungsbildschirm</system:String>
+    <system:String x:Key="item211">Update Verfügbar</system:String>
 </ResourceDictionary>
