--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">Please close H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.\n\nYou can use the button below to kill all processes of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version:</system:String>
-    <system:String x:Key="item124">Launcher Version v</system:String>
+    <system:String x:Key="item124">Launcher version</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Developers</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">Financial Contributors</system:String>
     <system:String x:Key="item171">22nd December 2016 game version, this is more up to date and supported by the project.</system:String>
     <system:String x:Key="item172">15th January 2015 game version, this doesn't recieve as many updates as 2016 and it may lack features.</system:String>
-    <system:String x:Key="item173">Report a bug...</system:String>
-    <system:String x:Key="item174">Here you can report any bugs that you have experienced in game while using the H1Emu Server files:</system:String>
-    <system:String x:Key="item175">Here you can report any bugs that you have experienced while using the H1Emu Launcher:</system:String>
+    <system:String x:Key="item174">Report a bug with the H1Emu server files</system:String>
+    <system:String x:Key="item175">Report a bug with the H1Emu launcher</system:String>
     <system:String x:Key="item176">deleting your singleplayer data.</system:String>
     <system:String x:Key="item177">No singleplayer data found.</system:String>
     <system:String x:Key="item178">Deleting your singleplayer data may fix any issues you are facing, be warned that you will lose all progress.\n\nWould you like to continue?</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">Delete</system:String>
     <system:String x:Key="item193">Copy</system:String>
     <system:String x:Key="item194">Exit</system:String>
+    <system:String x:Key="item195">Game Files</system:String>
+    <system:String x:Key="item196">Account Key</system:String>
+    <system:String x:Key="item197">Options</system:String>
+    <system:String x:Key="item198">Bug Reports</system:String>
+    <system:String x:Key="item199">About</system:String>
+    <system:String x:Key="item200">Selected language</system:String>
+    <system:String x:Key="item201">Display image carousel</system:String>
+    <system:String x:Key="item202">Minimise to system tray</system:String>
+    <system:String x:Key="item203">On</system:String>
+    <system:String x:Key="item204">Off</system:String>
+    <system:String x:Key="item205">REPORT</system:String>
+    <system:String x:Key="item206">Settings</system:String>
+    <system:String x:Key="item207">Add Server</system:String>
+    <system:String x:Key="item208">Disclaimer</system:String>
+    <system:String x:Key="item209">Message</system:String>
+    <system:String x:Key="item210">Splash Screen</system:String>
+    <system:String x:Key="item211">Update Available</system:String>
 </ResourceDictionary>
