--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">Prosze zamknij H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.\n\nMożesz użyć poniższego przycisku, aby zabić wszystkie procesy H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry:</system:String>
-    <system:String x:Key="item124">Wersja launchera v</system:String>
+    <system:String x:Key="item124">Wersja launchera</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Deweloperzy</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">Współtwórcy Finansowi</system:String>
     <system:String x:Key="item171">Wersja gry z 22 grudnia 2016, jest bardziej aktualna i wspierana przez projekt.</system:String>
     <system:String x:Key="item172">Wersja gry z 15 stycznia 2015, nie otrzymuje tak wielu aktualizacji jak 2016 i może brakować jej funkcji.</system:String>
-    <system:String x:Key="item173">Zgłoś błąd...</system:String>
-    <system:String x:Key="item174">Tutaj możesz zgłosić wszelkie błędy, których doświadczyłeś w grze podczas korzystania z plików serwera H1Emu:</system:String>
-    <system:String x:Key="item175">Tutaj możesz zgłosić wszelkie błędy, których doświadczyłeś podczas korzystania z Launchera H1Emu:</system:String>
+    <system:String x:Key="item174">Zgłoś błąd w plikach serwera H1Emu</system:String>
+    <system:String x:Key="item175">Zgłoś błąd w programie uruchamiającym H1Emu</system:String>
     <system:String x:Key="item176">usuwanie danych dla jednego gracza.</system:String>
     <system:String x:Key="item177">Nie znaleziono danych dla jednego gracza.</system:String>
     <system:String x:Key="item178">Usunięcie danych trybu jednoosobowego może rozwiązać wszelkie napotkane problemy. Ostrzegamy, że utracisz cały postęp.\n\nCzy chcesz kontynuować?</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">Usuwać</system:String>
     <system:String x:Key="item193">Kopiuj</system:String>
     <system:String x:Key="item194">Wyjście</system:String>
+    <system:String x:Key="item195">Pliki Gry</system:String>
+    <system:String x:Key="item196">Klucz do Konta</system:String>
+    <system:String x:Key="item197">Opcje</system:String>
+    <system:String x:Key="item198">Zgłaszanie Błędów</system:String>
+    <system:String x:Key="item199">O</system:String>
+    <system:String x:Key="item200">Wybrany język</system:String>
+    <system:String x:Key="item201">Wyświetl karuzelę obrazów</system:String>
+    <system:String x:Key="item202">Minimalizuj do zasobnika systemowego</system:String>
+    <system:String x:Key="item203">Na</system:String>
+    <system:String x:Key="item204">Wyłączony</system:String>
+    <system:String x:Key="item205">RAPORT</system:String>
+    <system:String x:Key="item206">Ustawienia</system:String>
+    <system:String x:Key="item207">Dodaj Serwer</system:String>
+    <system:String x:Key="item208">Zastrzeżenie</system:String>
+    <system:String x:Key="item209">Wiadomość</system:String>
+    <system:String x:Key="item210">Ekran Powitalny</system:String>
+    <system:String x:Key="item211">Dostępna Aktualizacja</system:String>
 </ResourceDictionary>
