--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">Por favor desligue o H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\nFeche todas as instâncias abertas de H1Z1.\n\nVocê pode usar o botão abaixo para matar todos os processos de H1Z1.</system:String>
     <system:String x:Key="item122">Versão atual do jogo:</system:String>
-    <system:String x:Key="item124">Launcher version v</system:String>
+    <system:String x:Key="item124">Launcher version</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Desenvolvedor Principal</system:String>
     <system:String x:Key="item127">Desenvolvedores</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">Contribuintes Financeiros</system:String>
     <system:String x:Key="item171">Versão do jogo de 22 de dezembro de 2016, mais atualizada e apoiada pelo projeto.</system:String>
     <system:String x:Key="item172">Versão de 15 de janeiro de 2015 do jogo, esta não recebe tantas atualizações quanto 2016 e pode não ter recursos.</system:String>
-    <system:String x:Key="item173">Reportar um erro...</system:String>
-    <system:String x:Key="item174">Aqui você pode relatar quaisquer bugs que você tenha experimentado no jogo ao usar os arquivos do servidor H1Emu:</system:String>
-    <system:String x:Key="item175">Aqui você pode relatar quaisquer bugs que você tenha experimentado ao usar o H1Emu Launcher:</system:String>
+    <system:String x:Key="item174">Relatar um bug com os arquivos do servidor H1Emu</system:String>
+    <system:String x:Key="item175">Relate um bug com o inicializador H1Emu</system:String>
     <system:String x:Key="item176">excluindo seus dados singleplayer.</system:String>
     <system:String x:Key="item177">Nenhum dado singleplayer encontrado.</system:String>
     <system:String x:Key="item178">Excluir seus dados de um jogador pode resolver qualquer problema que você esteja enfrentando, esteja avisado de que você perderá todo o progresso.\n\nDeseja continuar?</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">Excluir</system:String>
     <system:String x:Key="item193">Cópia de</system:String>
     <system:String x:Key="item194">Saída</system:String>
+    <system:String x:Key="item195">Arquivos de Jogo</system:String>
+    <system:String x:Key="item196">Chave da Conta</system:String>
+    <system:String x:Key="item197">Opções</system:String>
+    <system:String x:Key="item198">Relatório de Erros</system:String>
+    <system:String x:Key="item199">Sobre</system:String>
+    <system:String x:Key="item200">Idioma selecionado</system:String>
+    <system:String x:Key="item201">Exibir carrossel de imagens</system:String>
+    <system:String x:Key="item202">Minimizar para a bandeja do sistema</system:String>
+    <system:String x:Key="item203">Sobre</system:String>
+    <system:String x:Key="item204">Desligado</system:String>
+    <system:String x:Key="item205">RELATÓRIO</system:String>
+    <system:String x:Key="item206">Definições</system:String>
+    <system:String x:Key="item207">Adicionar Servidor</system:String>
+    <system:String x:Key="item208">Isenção de Responsabilidade</system:String>
+    <system:String x:Key="item209">Mensagem</system:String>
+    <system:String x:Key="item210">Tela de Abertura</system:String>
+    <system:String x:Key="item211">Atualização Disponível</system:String>
 </ResourceDictionary>
