--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -102,7 +102,7 @@
     <system:String x:Key="item120">请关闭已经启动的H1Z1游戏。</system:String>
     <system:String x:Key="item121">H1Z1游戏已经启动。\n\n请关闭所有打开的 H1Z1 实例。\n\n您可以使用下面的按钮来杀死 H1Z1 的所有进程。</system:String>
     <system:String x:Key="item122">当前游戏版本：</system:String>
-    <system:String x:Key="item124">启动器版本 v</system:String>
+    <system:String x:Key="item124">启动器版本</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">领导开发</system:String>
     <system:String x:Key="item127">开发商</system:String>
@@ -148,9 +148,8 @@
     <system:String x:Key="item170">财务贡献者</system:String>
     <system:String x:Key="item171">2016 年 12 月 22 日版本的游戏，这是最新的并由项目支持。</system:String>
     <system:String x:Key="item172">2015 年 1 月 15 日版本的游戏，它没有收到 2016 年那么多的更新，并且可能缺少功能。</system:String>
-    <system:String x:Key="item173">报告错误...</system:String>
-    <system:String x:Key="item174">在这里您可以报告您在使用 H1Emu 服务器文件时在游戏中遇到的任何错误：</system:String>
-    <system:String x:Key="item175">在这里您可以报告您在使用 H1Emu Launcher 时遇到的任何错误：</system:String>
+    <system:String x:Key="item174">报告 H1Emu 服务器文件的错误</system:String>
+    <system:String x:Key="item175">报告 H1Emu 启动器的错误</system:String>
     <system:String x:Key="item176">删除您的单人游戏数据。</system:String>
     <system:String x:Key="item177">未找到单人游戏数据。</system:String>
     <system:String x:Key="item178">删除你的单人游戏数据可能会解决你面临的任何问题，请注意你将失去所有进度。\n\n你想继续吗？</system:String>
@@ -170,4 +169,21 @@
     <system:String x:Key="item192">删除</system:String>
     <system:String x:Key="item193">复制</system:String>
     <system:String x:Key="item194">出口</system:String>
+    <system:String x:Key="item195">游戏文件</system:String>
+    <system:String x:Key="item196">账户密钥</system:String>
+    <system:String x:Key="item197">选项</system:String>
+    <system:String x:Key="item198">错误报告</system:String>
+    <system:String x:Key="item199">关于</system:String>
+    <system:String x:Key="item200">所选语言</system:String>
+    <system:String x:Key="item201">显示图像轮播</system:String>
+    <system:String x:Key="item202">最小化到系统托盘</system:String>
+    <system:String x:Key="item203">在</system:String>
+    <system:String x:Key="item204">离开</system:String>
+    <system:String x:Key="item205">报告</system:String>
+    <system:String x:Key="item206">游戏配置</system:String>
+    <system:String x:Key="item207">添加服务器</system:String>
+    <system:String x:Key="item208">免责声明</system:String>
+    <system:String x:Key="item209">信息</system:String>
+    <system:String x:Key="item210">启动画面</system:String>
+    <system:String x:Key="item211">可用更新</system:String>
 </ResourceDictionary>
