--- a/H1EmuLauncher/SteamFramePages/DownloadComplete.xaml
+++ b/H1EmuLauncher/SteamFramePages/DownloadComplete.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="H1EmuLauncher.SteamFrame.DownloadComplete"
+﻿<UserControl x:Class="H1EmuLauncher.SteamFramePages.DownloadComplete"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,9 @@
       mc:Ignorable="d" 
       d:DesignWidth="565"
       d:DesignHeight="140"
-      FontFamily="Bahnschrift Light">
+      FontFamily="Bahnschrift Light"
+      FontSize="16"
+      Foreground="FloralWhite">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -20,16 +22,15 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Download complete message -->
         <TextBlock VerticalAlignment="Top"
                    HorizontalAlignment="Center"
-                   Margin="0,-2,0,0"
-                   FontSize="16"
-                   Foreground="White"
+                   Margin="0,0,0,0"
                    Background="Transparent"
                    Cursor="Arrow"
                    TextAlignment="Center">
@@ -42,17 +43,23 @@
 
         <!-- Back to login page button -->
         <Button Grid.Row="1"
-                RenderOptions.BitmapScalingMode="Fant"
-                Height="45"
+                Click="BackToLoginPage"
+                Margin="20"
+                Padding="20,7,20,7"
+                FontFamily="Arial Black"
+                BorderThickness="0"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Center"
-                Foreground="White"
-                FontFamily="Arial Black"
-                FontSize="28"
-                Click="BackToLoginPage"
-                Width="270"
-                BorderThickness="0"
                 Content="{DynamicResource item25}"
-                Style="{DynamicResource StandardButton}"/>
+                Style="{DynamicResource StandardButton}">
+
+            <Button.Effect>
+                <DropShadowEffect BlurRadius="15"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="0"
+                                  Opacity="0.3"/>
+            </Button.Effect>
+        </Button>
     </Grid>
 </UserControl>
