--- a/H1EmuLauncher/SteamFramePages/GameInfo.xaml
+++ b/H1EmuLauncher/SteamFramePages/GameInfo.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="H1EmuLauncher.SteamFrame.GameInfo"
+﻿<UserControl x:Class="H1EmuLauncher.SteamFramePages.GameInfo"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,9 @@
       mc:Ignorable="d" 
       d:DesignWidth="565"
       d:DesignHeight="140"
-      FontFamily="Bahnschrift Light">
+      FontFamily="Bahnschrift Light"
+      FontSize="16"
+      Foreground="FloralWhite">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -20,7 +22,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -31,49 +35,60 @@
 
         <!-- 2016 Button -->
         <Button Click="Button2016"
-                Width="270"
-                Height="45"
-                VerticalAlignment="Top"
-                HorizontalAlignment="Left"
-                Foreground="White"
-                FontFamily="Arial Black"
+                Margin="0,0,10,0"
+                Padding="0,8,0,8"
                 FontSize="24"
+                FontFamily="Arial Black"
                 BorderThickness="0"
+                VerticalAlignment="Center"
                 Content="{DynamicResource item32}"
-                Style="{DynamicResource StandardButton}"/>
+                Style="{DynamicResource StandardButton}">
+
+            <Button.Effect>
+                <DropShadowEffect BlurRadius="15"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="0"
+                                  Opacity="0.3"/>
+            </Button.Effect>
+        </Button>
 
         <!-- 2016 Button Description -->
         <TextBlock Grid.Column="1"
-                   Margin="5,0,0,0"
-                   FontSize="16"
-                   Foreground="White"
+                   Margin="10,0,0,0"
                    TextWrapping="Wrap"
                    IsEnabled="False"
+                   VerticalAlignment="Center"
                    Text="{DynamicResource item171}"/>
 
         <!-- 2015 Button -->
-        <Button Grid.Row="1"
+        <Button Grid.Row="2"
                 Click="Button2015"
-                Width="270"
-                Height="45"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Left"
-                Foreground="White"
-                FontFamily="Arial Black"
+                Margin="0,0,10,0"
+                Padding="0,8,0,8"
                 FontSize="24"
+                FontFamily="Arial Black"
                 BorderThickness="0"
+                VerticalAlignment="Center"
                 Content="{DynamicResource item31}"
-                Style="{DynamicResource StandardButton}"/>
+                Style="{DynamicResource StandardButton}">
+
+            <Button.Effect>
+                <DropShadowEffect BlurRadius="15"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="0"
+                                  Opacity="0.3"/>
+            </Button.Effect>
+        </Button>
 
         <!-- 2015 Button Description -->
         <TextBlock Grid.Column="1"
-                   Grid.Row="1"
-                   Margin="5,0,0,0"
-                   VerticalAlignment="Center"
-                   FontSize="16"
-                   Foreground="White"
+                   Grid.Row="2"
+                   Margin="10,0,0,0"
                    TextWrapping="Wrap"
                    IsEnabled="False"
+                   VerticalAlignment="Center"
                    Text="{DynamicResource item172}"/>
     </Grid>
 </UserControl>
