--- a/H1EmuLauncher/SteamFramePages/Login.xaml
+++ b/H1EmuLauncher/SteamFramePages/Login.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="H1EmuLauncher.SteamFrame.Login"
+﻿<UserControl x:Class="H1EmuLauncher.SteamFramePages.Login"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,6 +7,8 @@
       d:DesignWidth="565"
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
+      FontSize="16"
+      Foreground="FloralWhite"
       UseLayoutRounding="True">
 
     <UserControl.Resources>
@@ -31,8 +33,10 @@
     <!-- Main Grid -->
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
@@ -44,112 +48,123 @@
         <TextBox x:Name="usernameBox"
                  Grid.Row="0"
                  Height="35"
-                 Margin="0,0,7,0"
-                 Padding="32,0,0,0"
-                 VerticalAlignment="Top"
+                 Margin="0,0,10,0"
+                 Padding="30,1,0,0"
+                 VerticalAlignment="Center"
                  VerticalContentAlignment="Center"
-                 FontSize="16"
                  GotFocus="UsernameBoxGotFocus"
                  LostFocus="UsernameBoxLostFocus"
-                 Style="{DynamicResource TextBoxPrimaryStyle}"/>
+                 Style="{DynamicResource TextBoxPrimaryStyle}">
+
+            <TextBox.Effect>
+                <DropShadowEffect BlurRadius="15"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="0"
+                                  Opacity="0.3"/>
+            </TextBox.Effect>
+        </TextBox>
 
         <!-- Hint for username textbox -->
         <TextBlock x:Name="usernameHint"
                    Grid.Row="0"
-                   Height="27"
-                   Margin="0,4,7,0"
-                   Padding="35,4,0,0"
-                   VerticalAlignment="Top"
+                   Margin="0,2,10,0"
+                   Padding="35,0,0,0"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
                    IsHitTestVisible="False"
-                   Foreground="White"
-                   FontSize="16"
                    Text="{DynamicResource item59}"/>
 
-        <!-- Image for username textbox -->
+        <!-- Icon for username textbox -->
         <Image Source="..\Resources\Shield.png"
+               Stretch="Uniform"
                Grid.Row="0"
                RenderOptions.BitmapScalingMode="Fant"
-               Width="20"
-               Height="20"
-               Margin="8,7,0,0"
-               VerticalAlignment="Top"
+               Width="18"
+               Height="18"
+               Margin="10,0,0,0"
+               VerticalAlignment="Center"
                HorizontalAlignment="Left"/>
         
         <!-- Text beside username textbox -->
         <TextBlock Grid.Column="1"
-                   Margin="7,0,0,0"
-                   VerticalAlignment="Top"
-                   Foreground="White"
-                   FontSize="16"
+                   Margin="10,0,0,0"
                    TextWrapping="Wrap"
+                   VerticalAlignment="Top"
                    Text="{DynamicResource item34}"/>
 
         <!-- Password box -->
         <PasswordBox x:Name="passwordBox"
-                     Grid.Row="1"
-                     VerticalAlignment="Top"
+                     Grid.Row="2"
                      Height="35"
-                     Margin="0,0,7,0"
-                     Padding="32,0,35,0"
-                     VerticalContentAlignment="Center"
-                     FontSize="16"
+                     Margin="0,0,10,0"
+                     Padding="30,0,35,0"
                      PasswordChar="●"
+                     VerticalAlignment="Center"
+                     VerticalContentAlignment="Center"
                      KeyDown="PasswordBoxKeyDown"
                      GotFocus="PasswordBoxGotFocus"
                      LostFocus="PasswordBoxLostFocus"
-                     Style="{DynamicResource PasswordBoxStyle}"/>
+                     Style="{DynamicResource PasswordBoxStyle}">
+
+            <PasswordBox.Effect>
+                <DropShadowEffect BlurRadius="15"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="0"
+                                  Opacity="0.3"/>
+            </PasswordBox.Effect>
+        </PasswordBox>
 
         <!-- Hint for password textbox -->
         <TextBlock x:Name="passwordHint"
-                   Grid.Row="1"
-                   Height="27"
-                   Margin="0,4,7,0"
-                   Padding="35,5,0,0"
-                   VerticalAlignment="Top"
+                   Grid.Row="2"
+                   Margin="0,1,0,0"
+                   Padding="35,0,0,0"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
                    IsHitTestVisible="False"
-                   Foreground="White"
-                   FontSize="16"
                    Text="{DynamicResource item60}"/>
 
-        <!-- Hint for password textbox -->
+        <!-- Icon for password textbox -->
         <Image Source="..\Resources\Padlock.png"
-               Grid.Row="1"
+               Stretch="Uniform"
+               Grid.Row="2"
                RenderOptions.BitmapScalingMode="Fant"
-               Width="20"
-               Height="20"
-               Margin="8,7,0,0"
-               VerticalAlignment="Top"
+               Width="18"
+               Height="18"
+               Margin="10,0,0,1"
+               VerticalAlignment="Center"
                HorizontalAlignment="Left"/>
 
         <!-- Button to submit username and password -->
         <Button x:Name="loginEnterButton"
-                Grid.Row="1"
+                Grid.Row="2"
                 Click="LoginButton"
                 RenderOptions.BitmapScalingMode="Fant"
-                Width="20"
-                Height="20"
-                Margin="0,7,17,0"
-                VerticalAlignment="Top"
+                Width="18"
+                Height="18"
+                Margin="0,0,20,1"
+                VerticalAlignment="Center"
                 HorizontalAlignment="Right"
                 BorderThickness="0"
                 Style="{DynamicResource EnterButton}">
             
             <Button.Background>
-                <ImageBrush ImageSource="..\Resources\Arrow.png"/>
+                <ImageBrush ImageSource="..\Resources\Arrow.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
 
         <!-- Loading wheel GIF -->
         <Image x:Name="loadingIcon"
-               Grid.Row="1"
+               Grid.Row="2"
                Source="..\Resources\Loading.png"
                RenderOptions.BitmapScalingMode="Fant"
                RenderTransformOrigin="0.5, 0.5"
-               VerticalAlignment="Top"
+               VerticalAlignment="Center"
                HorizontalAlignment="Right"
-               Margin="0,7,17,0"
-               Height="20"
-               Width="20"
+               Margin="0,0,20,1"
+               Height="18"
                Visibility="Hidden">
 
             <Image.RenderTransform>
@@ -158,12 +173,10 @@
         </Image>
 
         <!-- Login message -->
-        <TextBlock Grid.Row="1"
+        <TextBlock Grid.Row="2"
                    Grid.Column="1"
-                   Margin="7,0,0,0"
+                   Margin="10,0,0,0"
                    VerticalAlignment="Top"
-                   Foreground="White"
-                   FontSize="16"
                    TextWrapping="Wrap"
                    Text="{DynamicResource item35}"/>
     </Grid>
